Draft Part 2 and Sync to Overleaf

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -22,9 +22,7 @@
 
 \section{Introduction}
 \input{sections/01_architecture}
-
-% Future sections will be included here
-% \input{sections/02_methodology}
+\input{sections/02_methodology}
 % \input{sections/03_allostasis}
 
 \bibliographystyle{naturemag}
