Draft Part 3 and Sync

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -23,7 +23,7 @@
 \section{Introduction}
 \input{sections/01_architecture}
 \input{sections/02_methodology}
-% \input{sections/03_allostasis}
+\input{sections/03_allostasis}
 
 \bibliographystyle{naturemag}
 \bibliography{references}
