Draft Part 4 and Finalize Sync

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -24,6 +24,7 @@
 \input{sections/01_architecture}
 \input{sections/02_methodology}
 \input{sections/03_allostasis}
+\input{sections/04_validation}
 
 \bibliographystyle{naturemag}
 \bibliography{references}
