Update README and Figure Pipeline

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -3,6 +3,8 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{geometry}
+\usepackage{graphicx}
+\graphicspath{ {./graphics/} }
 \geometry{
  a4paper,
  total={170mm,257mm},
