--- a/tex/sections/01_architecture.tex
+++ b/tex/sections/01_architecture.tex
@@ -3,6 +3,12 @@
 \subsection{1.1 개요: 신체화된 신경 인공지능 (Embodied Neuro-AI)}
 본 제안서는 인간의 인지 과정이 뇌 내부 연산뿐만 아니라 신체(Body)와 환경(Environment)의 상호작용 속에서 발현된다는 \textbf{"Embodied AI"} 철학을 따름. 시각/청각 등 외부 감각(External Sense)과 뇌파/고유감각 등 내부 신호(Internal Signal)를 통합하여, 인간 수준의 적응성과 강건성을 갖춘 \textbf{"DIVER-Neuro 파운데이션 모델"}을 제안함.
 
+\begin{figure}[h]
+\centering
+\includegraphics[width=1.0\textwidth]{graphics/dual_encoder_titans_architecture.png}
+\caption{Dual Encoder Titans Architecture}
+\end{figure}
+
 \subsection{1.2 듀얼 인코더 시스템 (Dual Encoders)}
 서로 다른 물리적 특성을 가진 두 가지 데이터 스트림 처리를 위해 특화된 \textbf{Dual Encoder} 구조를 채택함.
 
