Sync: Received updates from Overleaf

--- a/tex/sections/04_validation.tex
+++ b/tex/sections/04_validation.tex
@@ -1,26 +1,26 @@
-\section{제4장: 이론적 타당성 및 성능 목표 (Validation)}
+\section{이론적 타당성 및 성능 목표 (Validation)}
 
-\subsection{4.1 Theoretical Superiority (이론적 우수성)}
+\subsection{Theoretical Superiority (이론적 우수성)}
 본 제안서는 단순한 실험적 시도가 아닌, 2024-2025년 발표된 최신 \textbf{SOTA(State-of-the-Art)} 연구 결과들에 기반하여 설계되었다.
 
-\subsubsection{4.1.1 Transformer vs. Titans/SSM in Brain}
+\subsubsection{Transformer vs. Titans/SSM in Brain}
 기존 Transformer(ViT)는 $O(N^2)$의 연산 복잡도로 인해 긴 시계열의 생체 신호를 처리하는 데 한계가 있다.
-*   \textbf{근거}: \textbf{BrainMamba (Wang et al., 2024)} 연구에 따르면, SSM 기반 모델이 Transformer 대비 \textbf{메모리 사용량 50% 절감}, \textbf{추론 속도 5배 향상}을 달성하면서도 EEG 분류 정확도는 더 높았다.
+*   \textbf{근거}: \textbf{BrainMamba (Wang et al., 2024)} 연구에 따르면, SSM 기반 모델이 Transformer 대비 \textbf{메모리 사용량 50 percent 절감}, \textbf{추론 속도 5배 향상}을 달성하면서도 EEG 분류 정확도는 더 높았다.
 *   \textbf{전략}: 본 연구는 BrainMamba의 SSM 코어를 \textbf{Titans Memory (Behrens et al., 2025)}로 확장하여, 단순 분류를 넘어 \textbf{"생애 전주기 기억(Lifelong Learning)"}이 가능한 아키텍처를 구현한다.
 
-\subsection{4.2 목표 성능 지표 (Performance Metrics)}
+\subsection{목표 성능 지표 (Performance Metrics)}
 
-\subsubsection{1. Robustness: Tubularity Score}
+\subsubsection{Robustness: Tubularity Score}
 *   \textbf{정의}: Neural Manifold가 노이즈(외란) 속에서도 고유의 위상학적 구조(Topology)를 유지하는 정도.
-*   \textbf{Target}: Baseline (ResNet/ViT) 대비 \textbf{+30% 향상}. (근거: Bertram et al., 2026).
+*   \textbf{Target}: Baseline (ResNet/ViT) 대비 \textbf{+30 percent 향상}. (근거: Bertram et al., 2026).
 
-\subsubsection{2. Efficiency: Effective Context Length}
+\subsubsection{Efficiency: Effective Context Length}
 *   \textbf{정의}: 손실 없이 역전파 가능한 최대 시퀀스 길이.
 *   \textbf{Target}: \textbf{1M Tokens} (Titans Memory 적용 시). 기존 RNN(1k), Transformer(8k-32k)를 압도함.
 
-\subsubsection{3. Generalization: Zero-shot Adaptation}
+\subsubsection{Generalization: Zero-shot Adaptation}
 *   \textbf{정의}: 학습하지 않은 새로운 피험자(New Subject)에 대한 적응 능력.
-*   \textbf{Target}: 학습 데이터 없이도 \textbf{Test-time Training}을 통해 즉시 80% 이상의 정확도 확보.
+*   \textbf{Target}: 학습 데이터 없이도 \textbf{Test-time Training}을 통해 즉시 80 percent 이상의 정확도 확보.
 
-\subsection{4.3 결론}
+\subsection{결론}
 DIVER-Neuro 모델은 \textbf{Titans의 기억 능력}과 \textbf{SSM의 효율성}을 \textbf{신체화(Embodiment)}된 에이전트에 통합함으로써, 차세대 AI의 새로운 표준(Standard)을 제시한다.
