--- a/tex/sections/99_red_team_review.tex
+++ b/tex/sections/99_red_team_review.tex
@@ -3,10 +3,10 @@
 \textbf{Date}: 2026-02-03
 \textbf{Target}: DIVER-Neuro Architecture & Methodology (Merged Drafts)
 
-\subsection{1. Overall Impression}
+\subsection{Overall Impression}
 The proposal incorporates cutting-edge components (\textbf{Titans/MIRAS}, \textbf{OmniField}, \textbf{Brain Tuning}) and demonstrates high ambition ("Excellence"). However, the rapid integration of these SOTA models creates "Frankenstein Risks" where components are conceptually stacked but mechanistically disconnected.
 
-\subsection{2. Coherence Gaps (Critical)}
+\subsection{Coherence Gaps (Critical)}
 
 \subsubsection{🚨 Gap 1: The "Field-to-Token" Disconnect}
 \begin{itemize}
@@ -36,5 +36,5 @@ The proposal incorporates cutting-edge components (\textbf{Titans/MIRAS}, \textb
 \item   \textbf{Action}: Explicitly state: \textbf{"MIRAS Surprise $\approx$ Free Energy (Prediction Error)."} Unify the narrative.
 \end{itemize}
 
-\subsection{3. Conclusion}
+\subsection{Conclusion}
 The "Excellence" is high, but "Rigour" is slightly loose. Address Gap 1 (Sampler) and Gap 4 (Unification) immediately. Gap 2 & 3 are secondary but strengthen the proposal.
